app/styles/main.scss
$icon-font-path: "/bower_components/sass-bootstrap/fonts/";

@import 'sass-bootstrap/lib/bootstrap';

body {
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
    background: rgb(231, 231, 231);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Bitter', serif;
}

h2 {
    font-size: 55px;
}

h3 {
    font-size: 30px;
}

a {
    color: #FA1CA1;
    &:hover {
        color: #FA1CA1;
    }
}

hr {
    border-top: 1px solid rgba(238, 238, 238, 0.37);
}

.main-link {
    color: white;
    text-decoration: underline;

    &:hover {
        color: #FA1CA1;
    }
}

.main-link-dark {
    color: #494949;
    text-decoration: underline;

    &:hover {
        color: #FA1CA1;
    }
}

// typography

.text-jumbo {
    line-height: 60px;
    font-size: 58px;
}

.text-jumbo-light {
    line-height: 60px;
    font-size: 58px;
    font-weight: 400;
}

.text-bigger {
    line-height: 24px;
    font-size: 26px;
    font-weight: 400;
}

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

.font2 {
    font-family: 'Bitter', serif;
}

.contact-info {
    line-height: 10px;
}

.phone {
    font-size: 20px;
}

// Background Colors
.blue-background {
    background-color: #258496;
    color: white;
}

.blue2-background {
    background-color: #349AAD;
    color: white;
}

.blue3-background {
    background-color: #57AAB9;
    color: white;
}

.blue4-background {
    background-color: #91C0C9;
    color: white;
}

// Buttons
.btn {
    color: rgb(83, 83, 83);
    border: 1px solid rgb(83, 83, 83);
    &:hover {
        color: white;
        background: #FA1CA1;
    }
}

.btn-light {
    color: white;
    border: 1px solid white;
}


/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}

/* Custom page header */
.header {
    border-bottom: 1px solid #e5e5e5;
    background: url(../images/reflection.jpg) no-repeat center top fixed;
    background-size: 100%;
    height: 650px;
    color: white;

    /* Make the masthead heading the same height as the navigation */
    h3 {
        margin-top: 0;
        margin-bottom: 0;
        line-height: 40px;
        padding-bottom: 19px;
    }
}

.header-copy {
    margin-top: 250px;
    padding-left: 5%;
}

.navigation {
    position: fixed;
    top: 0;
    width: 100%;
    border-bottom: 1px solid white;
    padding-top: 15px;
    padding-bottom: 15px;
    background: url(../images/reflection.jpg) no-repeat center top fixed;
    background-size: 100%;
    z-index: 10;
    color: white;
}

.nav {

    li {
        margin-right: 10px;
    }

    li a {
        color: white;
        border: 1px solid white;

        &:hover {
            background-color: #FA1CA1;
        }
    }
}

.about-section {
    position: relative;

    .about-link {
        position: absolute;
        top: -120px;
    }
}

.contact-links {
    padding-left: 0px;
    li {
        display: inline-block;
        padding-right: 10px;
    }
}

/* Custom page footer */
.container-narrow > hr {
    margin: 20px 0;
    border-top: 1px solid rgba(238, 238, 238, 0.37);
}

.container .jumbotron {
    padding: 30px 50px;
}

.work {
    padding-top: 19px;
    color: #494949;
    border-top: 1px solid #e5e5e5;
    position: relative;

    .work-link {
        position: absolute;
        top: -120px;

    }
}

.portfolio-item {
    padding-top: 20px;
    padding-bottom: 30px;
    position: relative;
}

.project-desc {
    .site-components {
        padding-left: 0px;

        li {
            display: inline-block;
            padding-right: 10px;
        }
    }
}

.project-example {
    margin-bottom: 30px;
}

.desktop {
    background-color: rgb(66, 66, 66);
    width: 520px;
    border: 1px solid gray;
    border-radius: 5px;
    padding: 10px;
    padding-bottom: 20px;
    margin: 15px auto;
}

.desktop-img {
    width: 500px;
    height: 300px;
    overflow-x: hidden;

    img {
        width: 500px;
    }
}

.mobile {
    background-color: rgb(66, 66, 66);
    width: 150px;
    border: 1px solid gray;
    border-radius: 5px;
    padding: 15px;
    padding-bottom: 0px;
    position: absolute;
    z-index: 5;
    top: 60px;
    left: 400px;

    .mobile-btn {
        width: 15px;
        height: 15px;
        border: 1px solid gray;
        border-radius: 50%;
        margin: 10px auto;
    }
}

.mobile-img {
    width: 120px;
    height: 250px;
    overflow-x: hidden;

    img {
        width: 120px;
    }
}


/* Main marketing message and sign up button */
.jumbotron {
    background: #F0F0F0;
    border-bottom: 1px solid #e5e5e5;
    .btn {
        font-size: 21px;
        padding: 14px 24px;
    }

    li {
        line-height: 1em;
        margin-bottom: 10px;
    }
}


/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    .container {
        max-width: 1000px;
    }

    /* Remove the padding we set earlier */
    .header,
    .marketing,
    .footer {
        padding-left: 0;
        padding-right: 0;
    }

    /* Space out the masthead */
    .header {
        margin-bottom: 30px;
    }
    
    /* Remove the bottom border on the jumbotron for visual effect */
    .jumbotron {
        border-bottom: 0;
    }
}

@media screen and (max-width: 1050px) {
    .header {
        background-size: 150%;
        height: 500px;
    }

    .text-jumbo-light {
        font-size: 50px;
    }
}

@media screen and (max-width: 992px) {
    .mobile {
        left: 500px;
    }
}

@media screen and (max-width: 768px) {
    .header {
        height: 400px;
        background: url(../images/reflection.jpg) no-repeat top center fixed;
        background-size: 200%;
    }

    .text-jumbo-light {
        font-size: 35px;
    }

    .project-example {
        margin-bottom: 40px;
    }

    .desktop {
    background-color: rgb(66, 66, 66);
    width: 400px;
    border: 1px solid gray;
    border-radius: 5px;
    padding: 10px;
    padding-bottom: 20px;
    margin: 15px auto;
    }

    .desktop-img {
        width: 380px;
        height: 200px;
        overflow-x: hidden;

        img {
            width: 380px;
        }
    }

    .mobile {
        background-color: rgb(66, 66, 66);
        width: 110px;
        border: 1px solid gray;
        border-radius: 5px;
        padding: 10px;
        padding-bottom: 0px;
        top: 20px;
        left: 65%;

        .mobile-btn {
            width: 15px;
            height: 15px;
            border: 1px solid gray;
            border-radius: 50%;
            margin: 10px auto;
        }
    }

    .mobile-img {
        width: 90px;
        height: 180px;
        overflow-x: hidden;

        img {
            width: 90px;
        }
    }
}

@media screen and (max-width: 500px) {
    .desktop {
        width: 300px;
    }

    .desktop-img {
        width: 280px;

        img {
            width: 280px;
        }
    }
}

@media screen and (max-width: 390px) {
    .navigation {
        background-color: #258496;
    }

    .nav li {
        width: 100%;
        text-align: center;
    }

    .nav-pills li {
        margin-left: 2px;
        a {
            border-radius: 0px;
        }
    }

    .phone {
        text-align: center;
    }

    .header {
        background-size: 330%;

        .header-copy {
            margin-top: 300px;
        }
    }

    .container {

        .jumbotron {
            padding: 10px 20px;
        }
    }

    .about-section {
        .about-link {
            top: -280px;
        }
    }

    .work {
        .work-link {
            top: -280px;
        }
    }
}

